--- a/src/views/css/index.css
+++ b/src/views/css/index.css
@@ -241,6 +241,7 @@ header {
 /* Estilo para o botão de adicionar ao carrinho */
 .button-add button {
   width: 100%;
+  height: 50px;
   background-color: #eeeff1;
   border: 0px;
   font-size: small;
@@ -307,12 +308,12 @@ header {
   }
 
   .descricao {
-    font-size: 14px; /* Ajuste de fonte para melhor legibilidade */
+    font-size: 12px; /* Ajuste de fonte para melhor legibilidade */
   }
 
   .button-add button {
-    font-size: medium; /* Aumenta o tamanho do texto do botão */
-    padding: 12px; /* Aumenta o padding do botão para um clique mais fácil */
+    font-size: 10px; /* Aumenta o tamanho do texto do botão */
+    height: 25px;
   }
 }
 
