--- a/src/views/css/index.css
+++ b/src/views/css/index.css
@@ -614,3 +614,40 @@ h2 {
 .carrinho-finalizar:hover {
   background-color: #0056b3;
 }
+
+
+.carrinho-preview {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.carrinho-item-preview {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.carrinho-item-preview img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.carrinho {
+  margin-top: 20px;
+}
+
+.card {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.roupa {
+  margin: 10px;
+}
+
+.button-add button {
+  display: flex;
+  align-items: center;
+}
