--- a/src/views/css/index.css
+++ b/src/views/css/index.css
@@ -304,10 +304,10 @@ header {
 
 @media (max-width: 480px) {
   .roupa {
-    flex: 1 1 calc(40% - 5px); /* Ajuste para 2 itens por linha */
-    max-width: calc(40% - 5px);
+    flex: 1 1 calc(49% - 5px); /* Ajuste para 2 itens por linha */
+    max-width: calc(45% - 5px);
     margin: 2%; /* Espaçamento melhorado para centralizar */
-    border: 1px solid rgba(104, 104, 104, 0.219);
+    border: 1px solid rgba(250, 143, 143, 0.219);
     border-radius: 0%;
     padding: 0%;
   }
@@ -318,7 +318,7 @@ header {
   }
 
   .descricao {
-    font-size: 12px; /* Ajuste de fonte para melhor legibilidade */
+    font-size: smaller; /* Ajuste de fonte para melhor legibilidade */
   }
 
   .button-add button {
